--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/typography": "^0.5.10",
     "aos": "^2.3.4",
+    "feather-icons": "^4.29.2",
     "flowbite": "^2.5.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/feather-icons": "^4.29.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
